# fsatlas

./: .gitignore  404.html  CLAUDE.md  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
assets/: extra.css
contributing/: index.html
docker/: index.html
docs/: contributing.md  docker.md  index.md  installation.md  quickstart.md
docs/reference/: architecture.md  cli.md
docs/user-guide/: atlases.md  custom-atlases.md  output-format.md
installation/: index.html
quickstart/: index.html
reference/architecture/: index.html
reference/cli/: index.html
search/: search_index.json
src/fsatlas/: __init__.py
src/fsatlas/atlases/: catalog.yaml  registry.py
src/fsatlas/cli/: main.py
src/fsatlas/core/: environment.py  extract.py  pipeline.py  transfer.py
user-guide/atlases/: index.html
user-guide/custom-atlases/: index.html
user-guide/output-format/: index.html
